force-app/main/default/objects/POP_Order__c/POP_Order__c.object-meta.xml
<CustomObject>
    <label>POP Order</label>
    <nameField>
        <displayFormat>POP-{0000}</displayFormat>
        <label>POP  Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POP Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>