force-app/main/default/objects/POP_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POP Orders</relationshipLabel>
    <relationshipName>POP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>