force-app/main/default/objects/POP_Order__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keychains</fullName>
            </value>
            <value>
                <fullName>Tshirts</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Mugs</fullName>
            </value>
            <value>
                <fullName>Pens</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>