force-app/main/default/objects/POP_Order__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>POP Orders</relationshipLabel>
    <relationshipName>POP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>